--- a/example/package.json
+++ b/example/package.json
@@ -2,9 +2,9 @@
   "name": "example",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "MIT",
