--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
   "devDependencies": {
     "@types/node": "^14.0.14",
     "typescript": "^3.9.6"
-  }
+  },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/@prostgles" }
 }
