--- a/example-typescript/package.json
+++ b/example-typescript/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node index.js"
   },
-  "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
