--- a/example-typescript/tsconfig.json
+++ b/example-typescript/tsconfig.json
@@ -1,22 +1,22 @@
 {
+    "files": ["./index.ts"],
     "compilerOptions": {
-        "module": "commonjs",
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "es6",
-        "noImplicitAny": true,
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "outDir": "dist",
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*",
-                "src/types/*"
-            ]
-        }
+      "target": "es6",
+      "lib": [
+        "es2019"
+      ],
+      // "strict": true,
+      "module": "commonjs",
+      // "removeComments": true,
+      "sourceMap": true,
+      "rootDir": ".",
+    //   "outDir": "dist",
+      // "outFile": "bundle.js",
+      // "moduleResolution": "node"
+      "declaration": true,
+      "declarationMap": true
     },
-    "include": [
-        "src/**/*"
+    "exclude": [
+      "dist"
     ]
 }
