fix typescript example

--- a/example-typescript/tsconfig.json
+++ b/example-typescript/tsconfig.json
@@ -6,6 +6,7 @@
         "es2019"
       ],
       // "strict": true,
+      "esModuleInterop" : true,
       "module": "commonjs",
       // "removeComments": true,
       "sourceMap": true,
