--- a/example-typescript/package.json
+++ b/example-typescript/package.json
@@ -6,5 +6,14 @@
   "scripts": {
     "start": "tsc && node index.js"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1",
+    "prostgles-client": "^1.0.1",
+    "prostgles-server": "^1.0.1",
+    "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/socket.io": "^2.1.8"
+  }
 }
