--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  // "files": ["lib/rootExport.ts"],
   "files": ["lib/index.ts"],
   "compilerOptions": {
     "target": "es6",
@@ -11,6 +12,8 @@
     "sourceMap": true,
     "rootDir": "./lib",
     "outDir": "dist",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     // "outFile": "bundle.js",
     // "moduleResolution": "node"
     "declaration": true,
