--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
     "socket.io": "^2.3.0"
   }
 }
