--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "prostgles-server",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "directories": {
-    "example": "example"
+    "dist": "dist"
   },
   "scripts": {
     "build": "tsc"
