fix TS Type generation

--- a/examples/full-example-vanilla/package.json
+++ b/examples/full-example-vanilla/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
+    "prostgles-server": "^1.0.33",
     "socket.io": "^2.3.0"
   }
 }
