--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     // "outFile": "bundle.js",
     // "moduleResolution": "node"
     "declaration": true,
