--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "1.3.8",
+  "version": "1.4.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/prostgles/prostgles-server-js#readme",
   "dependencies": {
     "bluebird": "^3.7.2",
-    "pg-promise": "^10.8.1"
+    "pg-promise": "^10.8.1",
+    "prostgles-types": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.11.1",
