--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "tsc --watch",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "cd tests && npm run build"
   },
   "repository": {
     "type": "git",
