--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@
 
 
 
-name: Postgres Service Example
+name: tests
 on:
   push:
     branches:
@@ -82,7 +82,7 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x]
-        
+
     services:
       postgres:
         image: postgres:10.8
