--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dist": "dist"
   },
   "scripts": {
+    "prepublish": "npm run build",
     "start": "tsc --watch",
     "build": "tsc",
     "test": "cd tests && npm i && npm run build"
