--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "1.4.8",
+  "version": "1.4.7",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,7 @@
     "dist": "dist"
   },
   "scripts": {
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "start": "tsc --watch",
     "build": "tsc",
     "test": "cd tests && npm i && npm run build"
