--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "1.5.02",
+  "version": "1.5.21",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,7 +11,7 @@
     "prepare": "npm run build",
     "start": "tsc --watch",
     "build": "tsc",
-    "test": "cd tests && npm i && npm run build"
+    "test": "cd tests/ && ./test.sh"
   },
   "repository": {
     "type": "git",
