--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "npm run build",
     "start": "tsc --watch",
     "build": "tsc",
-    "test": "tsc && cd tests/ && ./test.sh"
+    "test": "npm i && tsc && cd tests/ && ./test.sh"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "pg-promise": "^10.8.1",
-    "prostgles-types": "^1.5.50"
+    "prostgles-types": "^1.5.51"
   },
   "devDependencies": {
     "@types/node": "^14.11.1",
