--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "homepage": "https://github.com/prostgles/prostgles-server-js#readme",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "i": "^0.3.6",
+    "npm": "^7.10.0",
     "pg-promise": "^10.9.5",
-    "prostgles-types": "^1.5.73"
+    "prostgles-types": "^1.5.80"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
