--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
   },
   "homepage": "https://github.com/prostgles/prostgles-server-js#readme",
   "dependencies": {
-    "aws-sdk": "^2.994.0",
+    "@aws-sdk/client-s3": "^3.34.0",
+    "aws-sdk": "^2.996.0",
     "bluebird": "^3.7.2",
     "file-type": "^16.5.3",
     "pg-promise": "^10.9.5",
-    "prostgles-types": "^1.5.101"
+    "prostgles-types": "^1.5.101",
+    "sharp": "^0.29.1"
   },
   "devDependencies": {
-    "@types/aws-sdk": "^2.7.0",
+    "@aws-sdk/types": "^3.34.0",
     "@types/file-type": "^10.9.1",
     "@types/node": "^14.14.35",
     "typescript": "^3.9.7"
