--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "file-type": "^16.5.3",
     "pg-promise": "^10.9.5",
     "prostgles-types": "^1.5.102",
-    "sharp": "^0.29.1",
-    "socket.io": "^4.2.0"
+    "sharp": "^0.29.1"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.34.0",
