--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "bluebird": "^3.7.2",
     "file-type": "^16.5.3",
     "pg-promise": "^10.9.5",
-    "prostgles-types": "^1.5.108",
+    "prostgles-types": "^1.5.115",
     "sharp": "^0.29.1"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.34.0",
+    "@types/bluebird": "^3.5.36",
     "@types/file-type": "^10.9.1",
     "@types/node": "^14.14.35",
     "typescript": "^3.9.7"
