--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "bluebird": "^3.7.2",
     "file-type": "^16.5.3",
     "pg-promise": "^10.11.1",
-    "prostgles-types": "^1.5.123",
+    "prostgles-types": "^1.5.124",
     "sharp": "^0.30.5"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.34.0",
     "@types/bluebird": "^3.5.36",
     "@types/node": "^14.14.35",
+    "@types/sharp": "^0.30.2",
     "typescript": "^3.9.7"
   }
 }
