--- a/examples/full-example-typescript/package.json
+++ b/examples/full-example-typescript/package.json
@@ -8,12 +8,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "prostgles-client": "^1.5.60",
-    "prostgles-server": "^1.5.39",
-    "socket.io": "^4.0.1"
-  },
-  "devDependencies": {
-    "@types/socket.io": "^2.1.12"
+    "express": "latest",
+    "prostgles-client": "latest",
+    "prostgles-server": "latest",
+    "socket.io": "^4.5.1"
   }
 }
