--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.13",
     "aws-sdk": "^2.1168.0",
     "bluebird": "^3.7.2",
+    "check-disk-space": "^3.3.1",
     "file-type": "^17.1.3",
     "pg-promise": "^10.11.1",
     "prostgles-types": "^1.5.169",
