--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
   "bugs": {
     "url": "https://github.com/prostgles/prostgles-server-js/issues"
   },
-  "homepage": "https://github.com/prostgles/prostgles-server-js#readme",
+  "keywords": [
+    "postgres",
+    "postgreSQL",
+    "react",
+    "typescript",
+    "realtime"
+  ],
+  "homepage": "https://prostgles.com",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.121.0",
     "@types/express": "^4.17.13",
