fix related subscription throttle bug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
+    
+    /** TODO */
+    "noUncheckedIndexedAccess": false,
+    
     // "outFile": "bundle.js",
     // "moduleResolution": "node"
     "keyofStringsOnly": true,
