--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,11 @@ jobs:
         # will assign a random free host port
         - 5432/tcp
         # needed because the postgres container does not provide a healthcheck
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        options: >- 
+          --health-cmd pg_isready 
+          --health-interval 10s 
+          --health-timeout 5s/ 
+          --health-retries 10
 
     steps:
     - uses: actions/checkout@v1     
