--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
         options: >- 
           --health-cmd pg_isready 
           --health-interval 10s 
-          --health-timeout 5s/ 
+          --health-timeout 5s
           --health-retries 10
 
     steps:
