--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "4.0.61",
+  "version": "4.0.62",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,7 +12,8 @@
     "start": "tsc --watch",
     "build": "tsc",
     "lint": "eslint . --ext .ts --quiet --fix",
-    "test": "rm -rf ./node_modules/* && npm i && npm run lint && cd tests/ && ./test.sh"
+    "test": "rm -rf ./node_modules/* && npm i && npm run lint && cd tests/ && ./test.sh",
+    "publish": "npm version patch --git-tag-version false && git add -A && git commit -m \"add OnInitReason\" && git push && npm publish"
   },
   "repository": {
     "type": "git",
