--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "4.1.5",
+  "version": "4.1.6",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -39,8 +39,7 @@
     "check-disk-space": "^3.3.1",
     "file-type": "^17.1.4",
     "pg-promise": "^11.3.0",
-    "prostgles-types": "^4.0.18",
-    "sharp": "^0.32.1"
+    "prostgles-types": "^4.0.18"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
