--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           POSTGRES_USER: api
           POSTGRES_PASSWORD: api
-          POSTGRES_DB: postgres
+          POSTGRES_DB: prostgles_server_tests
         ports:
         # will assign a random free host port
         - 5432/tcp
