add insert allowedNestedInserts

--- a/package.json
+++ b/package.json
@@ -39,17 +39,18 @@
     "@types/json-schema": "^7.0.11",
     "bluebird": "^3.7.2",
     "check-disk-space": "^3.3.1",
-    "file-type": "^17.1.4",
+    "file-type": "^18.5.0",
     "pg-promise": "^11.3.0",
     "prostgles-types": "^4.0.44"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
+    "@types/file-type": "^10.9.1",
     "@types/node": "^18.0.3",
     "@types/sharp": "^0.30.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.51.0",
-    "typescript": "^5.0.3"
+    "typescript": "^5.2.2"
   }
 }
