--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/express": "^4.17.13",
     "@types/json-schema": "^7.0.11",
     "bluebird": "^3.7.2",
+    "body-parser": "^1.20.2",
     "check-disk-space": "^3.3.1",
     "file-type": "^18.5.0",
     "pg-promise": "^11.3.0",
