--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "4.1.119",
+  "version": "4.1.120",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -37,12 +37,16 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/json-schema": "^7.0.11",
+    "@types/pg": "^8.10.9",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
     "check-disk-space": "^3.3.1",
     "file-type": "^18.5.0",
-    "pg-promise": "^11.3.0",
-    "prostgles-types": "^4.0.49"
+    "pg": "^8.11.3",
+    "pg-iterator": "^0.3.0",
+    "pg-promise": "^11.5.4",
+    "prostgles-client": "^4.0.53",
+    "prostgles-types": "^4.0.55"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
