--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "4.1.125",
+  "version": "4.1.126",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -42,10 +42,11 @@
     "body-parser": "^1.20.2",
     "check-disk-space": "^3.3.1",
     "file-type": "^18.5.0",
-    "pg-iterator": "^0.3.0",
+    "pg": "^8.11.3",
     "pg-promise": "^11.5.4",
+    "pg-query-stream": "^4.5.3",
     "prostgles-client": "^4.0.53",
-    "prostgles-types": "^4.0.61"
+    "prostgles-types": "^4.0.64"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
