--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "4.1.142",
+  "version": "4.1.143",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -43,8 +43,8 @@
     "check-disk-space": "^3.3.1",
     "file-type": "^18.5.0",
     "pg": "^8.11.3",
+    "pg-cursor": "^2.10.3",
     "pg-promise": "^11.5.4",
-    "pg-query-stream": "^4.5.3",
     "prostgles-client": "^4.0.53",
     "prostgles-types": "^4.0.67"
   },
@@ -52,6 +52,7 @@
     "@types/bluebird": "^3.5.36",
     "@types/file-type": "^10.9.1",
     "@types/node": "^18.0.3",
+    "@types/pg-cursor": "^2.7.2",
     "@types/sharp": "^0.30.4",
     "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
