--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-unused-expressions": "off",
+    "@typescript-eslint/no-require-imports": "off",
+    "@typescript-eslint/no-empty-object-type": "off",
     "no-async-promise-executor": "off",
     "@typescript-eslint/no-var-requires": "off",
     "no-unused-vars": "off",
