--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "4.2.133",
+  "version": "4.2.134",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -38,20 +38,30 @@
     "body-parser": "^1.20.3",
     "check-disk-space": "^3.4.0",
     "file-type": "^18.5.0",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-microsoft": "^2.1.0",
     "pg": "^8.11.5",
     "pg-cursor": "^2.11.0",
     "pg-promise": "^11.9.1",
-    "prostgles-types": "^4.0.89"
+    "prostgles-types": "^4.0.105"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^22.8.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-facebook": "^3.0.3",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-microsoft": "^1.0.3",
     "@types/pg": "^8.11.5",
     "@types/pg-cursor": "^2.7.2",
     "@types/sharp": "^0.30.4",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^8.51.0",
     "socket.io": "^4.8.1",
     "typescript": "^5.3.3"
