--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "4.2.178",
+  "version": "4.2.179",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -54,7 +54,7 @@
     "pg": "^8.11.5",
     "pg-cursor": "^2.11.0",
     "pg-promise": "^11.9.1",
-    "prostgles-types": "^4.0.112"
+    "prostgles-types": "^4.0.117"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -67,6 +67,7 @@
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^8.51.0",
+    "prettier": "^3.4.2",
     "socket.io": "^4.8.1",
     "typescript": "^5.3.3"
   }
