--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
+    "project": "./tsconfig.json",
     "allowImportExportEverywhere": true
   },
   "parser": "@typescript-eslint/parser",
@@ -20,6 +21,7 @@
     "@typescript-eslint/no-empty-object-type": "off",
     "no-async-promise-executor": "off",
     "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-unnecessary-condition": "error", 
     "no-unused-vars": "off",
     "no-empty":"off",
     "@typescript-eslint/no-unused-vars": [
