--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "4.2.223",
+  "version": "4.2.224",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -52,10 +52,11 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-microsoft": "^2.1.0",
+    "passport-oauth2": "^1.8.0",
     "pg": "^8.11.5",
     "pg-cursor": "^2.11.0",
     "pg-promise": "^11.9.1",
-    "prostgles-types": "^4.0.139"
+    "prostgles-types": "^4.0.141"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
