--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prostgles-server",
-  "version": "4.2.248",
+  "version": "4.2.249",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -59,6 +59,7 @@
     "prostgles-types": "^4.0.154"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/express": "^4.17.21",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^22.10.2",
@@ -66,11 +67,13 @@
     "@types/pg": "^8.11.5",
     "@types/pg-cursor": "^2.7.2",
     "@types/sharp": "^0.30.4",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "eslint": "^8.51.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9.22.0",
+    "eslint-plugin-security": "^3.0.1",
     "prettier": "^3.4.2",
     "socket.io": "^4.8.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.26.1"
   }
 }
