--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "declarationMap": true, 
     "noImplicitAny": true
   },
+  "include": [
+    "lib/**/*.spec.ts"
+  ],
   "exclude": [
     "dist"
   ]
