--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test-quick": "cd tests/ && ./test.sh -quick",
     "test": "npm run test:lib && npm run test-only",
     "generate-docs": "rm -f ./docs/*.md && cd docs/utils && npm start",
-    "pushpublish": "npm run generate-docs && npm version patch --git-tag-version false && git push && npm publish --no-audit",
+    "pushpublish": "npm run generate-docs && npm version patch --git-tag-version false && git push && npm publish",
     "circular-deps": "tsc && npx madge --circular  ."
   },
   "repository": {
